--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@types/mysql": "^2.15.10",
+    "mysql": "^2.18.1",
     "next": "^9.2.2",
     "react": "^16.12.0",
     "react-dom": "^16.13.0"
