--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "myApp",
+  "name": "myapp",
   "version": "1.0.0",
-  "description": "",
+  "description": "To be converted to md later when I upload on github.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,9 +16,15 @@
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "@types/mysql": "^2.15.10",
+    "dotenv": "^8.2.0",
+    "firebase": "^7.14.2",
     "mysql": "^2.18.1",
     "next": "^9.2.2",
     "react": "^16.12.0",
     "react-dom": "^16.13.0"
-  }
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "devDependencies": {}
 }
